yaml_parser/tests/fail/comment-between-plain-scalar-lines.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 1
  |
2 | word2
  | ^
expected `...`
